tests/ui/error/nested_meta_list.rs
#[derive(tidy_builder::Builder)]
struct MyStruct {
    #[builder(builder(each = "each"))]
    args: Vec<String>,
}

fn main() {}
