tests/ui/error/nested_meta_list.stderr
error: Nested meta list is not supported
 --> tests/ui/error/nested_meta_list.rs:3:15
  |
3 |     #[builder(builder(each = "each"))]
  |               ^^^^^^^^^^^^^^^^^^^^^^
